add support for drag'n'drop interaction for Ball component

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dependencies": {
         "classnames": "^2.2.5",
         "react": "^15.6.1",
+        "react-dnd": "^2.4.0",
+        "react-dnd-html5-backend": "^2.4.1",
         "react-dom": "^15.6.1"
     },
     "devDependencies": {
