--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "classnames": "^2.2.5",
         "react": "^15.6.1",
         "react-dnd": "^2.4.0",
-        "react-dnd-html5-backend": "^2.4.1",
+        "react-dnd-touch-backend": "^0.3.13",
         "react-dom": "^15.6.1"
     },
     "devDependencies": {
