--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
 	"presets": ["es2015", "react"],
 	"plugins": [
 		"transform-es2015-destructuring",
-		"transform-object-rest-spread"
+		"transform-object-rest-spread",
+		"transform-class-properties"
 	],
 	"env": {
 		"development": {
