--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "devDependencies": {
         "babel-core": "^6.25.0",
         "babel-loader": "^7.1.1",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-es2015-destructuring": "^6.23.0",
         "babel-plugin-transform-object-rest-spread": "^6.23.0",
         "babel-preset-es2015": "^6.24.1",
