--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "style-loader": "^0.18.2",
         "webpack": "^3.4.1",
         "webpack-dev-server": "^2.6.1",
-        "webpack-pwa-manifest": "^3.1.6"
+        "webpack-pwa-manifest": "^3.1.6",
+        "webpack-svgstore-plugin": "^4.0.1"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
