--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,16 @@
 {
   "icons": [
     {
+      "src": "assets/icons/icon_512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon_256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
       "src": "assets/icons/icon_192x192.png",
       "sizes": "192x192",
       "type": "image/png"
