--- a/manifest.json
+++ b/manifest.json
@@ -81,9 +81,9 @@
   "description": "Bulls & Cows game",
   "name": "Bulls & Cows",
   "lang": "en-US",
-  "background_color": "#f0f0f0",
+  "background_color": "#606060",
   "display": "fullscreen",
   "start_url": "./",
-  "theme-color": "#f0f0f0",
-  "theme_color": "#f0f0f0"
+  "theme-color": "#606060",
+  "theme_color": "#606060"
 }
