--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,8 @@
 	"plugins": [
 		"transform-es2015-destructuring",
 		"transform-object-rest-spread",
-		"transform-class-properties"
+		"transform-class-properties",
+		"react-hot-loader/babel"
 	],
 	"env": {
 		"development": {
