--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "license": "MIT",
     "dependencies": {
         "classnames": "^2.2.5",
-        "react": "^15.6.1",
-        "react-dnd": "^2.4.0",
-        "react-dnd-touch-backend": "^0.3.13",
-        "react-dom": "^15.6.1"
+        "react": "^16.0.0",
+        "react-dnd": "^2.5.3",
+        "react-dnd-touch-backend": "^0.3.15",
+        "react-dom": "^16.0.0"
     },
     "devDependencies": {
         "babel-core": "^6.25.0",
@@ -25,7 +25,7 @@
         "extract-text-webpack-plugin": "^3.0.0",
         "html-webpack-plugin": "^2.29.0",
         "node-sass": "^4.5.3",
-        "react-hot-loader": "^1.3.1",
+        "react-hot-loader": "^3.0.0-beta.7",
         "sass-loader": "^6.0.6",
         "style-loader": "^0.18.2",
         "webpack": "^3.4.1",
