refactor: change files structure, eslint refactor

--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,19 @@
 {
-	"presets": ["es2015", "react"],
-	"plugins": [
-		"transform-es2015-destructuring",
-		"transform-object-rest-spread",
-		"transform-class-properties",
-		"react-hot-loader/babel"
-	],
-	"env": {
-		"development": {
-			"plugins": []
-		},
-		"production": {
-			"plugins": []
-		}
-	}
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-syntax-dynamic-import",
+    "react-hot-loader/babel"
+  ],
+  "env": {
+    "development": {
+      "plugins": []
+    },
+    "production": {
+      "plugins": []
+    }
+  }
 }
