--- a/package.json
+++ b/package.json
@@ -1,41 +1,62 @@
 {
-    "name": "bulls-and-cows",
-    "version": "1.0.0",
-    "description": "A Bulls & Cows game variation",
-    "main": "app.jsx",
-    "author": "Alexander Novikov",
-    "license": "MIT",
-    "dependencies": {
-        "classnames": "^2.2.5",
-        "react": "^16.0.0",
-        "react-dnd": "^2.5.3",
-        "react-dnd-touch-backend": "^0.3.15",
-        "react-dom": "^16.0.0"
-    },
-    "devDependencies": {
-        "babel-core": "^6.25.0",
-        "babel-loader": "^7.1.1",
-        "babel-plugin-transform-class-properties": "^6.24.1",
-        "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-        "babel-plugin-transform-object-rest-spread": "^6.23.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "copy-webpack-plugin": "^4.0.1",
-        "css-loader": "^0.28.4",
-        "extract-text-webpack-plugin": "^3.0.0",
-        "html-webpack-plugin": "^2.29.0",
-        "node-sass": "^4.5.3",
-        "react-hot-loader": "^3.0.0-beta.7",
-        "sass-loader": "^6.0.6",
-        "style-loader": "^0.18.2",
-        "webpack": "^3.4.1",
-        "webpack-dev-server": "^2.6.1",
-        "webpack-pwa-manifest": "^3.1.6",
-        "webpack-svgstore-plugin": "^4.0.1"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "webpack-dev-server --open --inline --hot --config ./webpack/webpack.dev.config.js",
-        "build": "webpack --config ./webpack/webpack.prod.config.js"
-    }
+	"name": "bulls-and-cows",
+	"version": "1.0.0",
+	"description": "A Bulls & Cows game variation",
+	"author": "Alexander Novikov",
+	"license": "MIT",
+	"homepage": "https://xanmk3.github.io/bulls-and-cows",
+	"dependencies": {
+		"babel-polyfill": "^6.26.0",
+		"classnames": "^2.2.5",
+		"react": "^16.6.0",
+		"react-dnd": "^2.5.3",
+		"react-dnd-touch-backend": "^0.3.15",
+		"react-dom": "^16.6.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.1.5",
+		"@babel/plugin-proposal-class-properties": "^7.3.3",
+		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
+		"@babel/preset-env": "^7.1.5",
+		"@babel/preset-react": "^7.0.0",
+		"@babel/register": "^7.0.0",
+		"babel-eslint": "^10.0.1",
+		"babel-loader": "^8.0.4",
+		"copy-webpack-plugin": "^4.0.1",
+		"css-loader": "^0.28.4",
+		"eslint": "^5.9.0",
+		"eslint-config-airbnb": "^17.1.0",
+		"eslint-import-resolver-alias": "^1.1.2",
+		"eslint-import-resolver-webpack": "^0.10.1",
+		"eslint-loader": "^2.1.1",
+		"eslint-plugin-import": "^2.14.0",
+		"eslint-plugin-jsx-a11y": "^6.1.2",
+		"eslint-plugin-react": "^7.11.1",
+		"gh-pages": "^2.0.1",
+		"html-webpack-plugin": "^3.2.0",
+		"mini-css-extract-plugin": "^0.6.0",
+		"node-sass": "^4.11.0",
+		"react-hot-loader": "^4.11.1",
+		"rimraf": "^2.6.3",
+		"sass-loader": "^6.0.6",
+		"style-loader": "^0.18.2",
+		"webpack": "^4.25.1",
+		"webpack-cli": "^3.1.2",
+		"webpack-dev-server": "^3.7.2",
+		"webpack-pwa-manifest": "^4.0.0",
+		"webpack-svgstore-plugin": "^4.1.0"
+	},
+	"scripts": {
+		"clean": "rimraf dist/*",
+		"start": "webpack-dev-server --open --inline --hot --config ./config/webpack.config.dev.js",
+		"prebuild": "npm run clean",
+		"build": "webpack --config ./config/webpack.config.prod.js",
+		"eslint": "node_modules/.bin/eslint.cmd --ext .js --ext .jsx ./src",
+		"eslint:fix": "node_modules/.bin/eslint.cmd --ext .js --ext .jsx ./src --fix",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"prebundleAnalyzer": "npm run clean && webpack --config ./config/webpack.config.prod.js --profile --json > dist/stats.json",
+		"bundleAnalyzer": "webpack-bundle-analyzer dist/stats.json",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
+	}
 }
