--- a/.eslintrc
+++ b/.eslintrc
@@ -38,10 +38,7 @@
     "brace-style": [ "error", "stroustrup" ],
     "import/prefer-default-export": "off",
     "no-param-reassign": "off",
-    "no-plusplus": [
-      "error",
-      { "allowForLoopAfterthoughts": true }
-    ],
+    "no-plusplus": "off",
     "jsx-quotes": [ "error", "prefer-single" ],
     "react/jsx-indent": [ "error", 4 ],
     "react/jsx-indent-props": [ "error", 4 ],
