--- a/manifest.json
+++ b/manifest.json
@@ -76,15 +76,14 @@
       "type": "image/png"
     }
   ],
-  "publicPath": null,
-  "description": "Bulls & Cows game",
   "name": "Bulls & Cows",
-  "lang": "en-US",
-  "display": "fullscreen",
-  "orientation": "portrait",
   "short_name": "b&c",
-  "background_color": "#606060",
-  "theme-color": "#606060",
+  "orientation": "portrait",
+  "display": "fullscreen",
   "start_url": "./",
-  "theme_color": "#606060"
+  "description": "Bulls & Cows game",
+  "lang": "en-US",
+  "background_color": "#606060",
+  "theme_color": "#606060",
+  "theme-color": "#606060"
 }
