refactor: use hooks version of react-dnd

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
   },
   "parser": "babel-eslint",
   "plugins": [
-    "react"
+    "react",
+    "react-hooks"
   ],
   "env": {
     "amd": true,
@@ -42,6 +43,10 @@
     "jsx-quotes": [ "error", "prefer-single" ],
     "react/jsx-indent": [ "error", 4 ],
     "react/jsx-indent-props": [ "error", 4 ],
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "react/state-in-constructor": 0,
+    "react/jsx-props-no-spreading": 0,
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
