--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"babel-polyfill": "^6.26.0",
 		"classnames": "^2.2.6",
+		"immer": "^4.0.0",
 		"react": "^16.9.0",
 		"react-dnd": "^9.3.4",
 		"react-dnd-touch-backend": "^9.3.4",
